[package]

name = "differential-dataflow-master"
version = "0.13.0-dev.1"
authors = ["Frank McSherry <fmcsherry@me.com>"]

description = "An incremental data-parallel dataflow platform"

# These URLs point to more information about the repository
documentation = "https://docs.rs/differential-dataflow"
homepage = "https://github.com/TimelyDataflow/differential-dataflow"
repository = "https://github.com/TimelyDataflow/differential-dataflow.git"
keywords = ["differential", "dataflow"]
license = "MIT"
readme = "README.md"
edition="2021"

[lib]
name = "differential_dataflow"

[workspace]
members = [
    ".",
    # "advent_of_code_2017",
    "dogsdogsdogs",
    "experiments",
    "interactive",
    "server",
    "server/dataflows/degr_dist",
    "server/dataflows/neighborhood",
    "server/dataflows/random_graph",
    "server/dataflows/reachability",
    #"tpchlike",
    "doop"
]

[dev-dependencies]
bincode = "1.3.1"
rdkafka = "0.24"
indexmap = "2.1"
rand="0.4"
byteorder="1"
itertools="^0.7"
serde_json = "1.0"
graph_map = "0.1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
abomonation = "0.7"
abomonation_derive = "0.5"
fnv="1.0.2"
timely-master = {workspace = true}

[workspace.dependencies]
timely-master = { version = "=0.13.0-dev.1", default-features = false }

[features]
default = ["timely-master/getopts"]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 4
