[package]
name = "dogsdogsdogs"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
license = "MIT"
edition = "2021"

[dependencies]
abomonation = "0.7"
abomonation_derive = "0.5"
timely-master = { workspace = true }
differential-dataflow-master = { path = "../", default-features = false }
serde = "1"
serde_derive = "1"

[dev-dependencies]
graph_map = "0.1"

[features]
default = ["timely-master/getopts"]
